@@ -57,8 +57,12 @@ public:
 	oprof_start();
 
 protected slots:
-	/// after selecting to choose a file/dir
-	void on_choose_file_or_dir();
+	/// select the kernel image filename
+	void choose_kernel_filename();
+	/// select the System.map filename
+	void choose_system_map_filename();
+	/// select the base directory of the deamon
+	void choose_opd_dir();
 	/// flush profiler 
 	void on_flush_profiler_data();
 	/// start profiler 
