@@ -1,3 +1,9 @@
+2001-09-30  Philippe Elie  <ph_e@club-internet.fr>
+
+	* gui/oprof_start.cpp:
+	* gui/oprof_start.h:
+	* gui/ui/oprof_start.base.ui: cleanup
+
 2001-09-29  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/opf_filter.cpp: check if we need debug info to work.
